# free-admin

./: .gitignore  COMMERCIAL-LICENSE.md  LICENSE  MANIFEST.in  README.md  freeadmin.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
contrib/admin/: __init__.py  api.py  boot.py  cli.py  crud.py  hub.py  middleware.py  provider.py  router.py  runner.py  version.py
docs/: architecture-overview.md  configuration.md  core-concepts-and-terminology.md  first-run-example.md  index.md  installation-and-cli.md  models-and-admin-models.md  module-map.md  project-structure.md  public-pages.md  public_pages.md  quick-start.md  release-review.md  what-is-freeadmin.md
docs/admin/: ADMIN.md  APPLICATION_BOOTSTRAP.md  CONVENTION.md  RBAC.md  VIEWS.md  actions.md  adapter.md  api.md  boot.md  cards.md  dashboard_cards.md  frontend.md  hub-router.md  inline_model_admin.md  model_admin.md  pages.md  public-pages.md  settings-mode.md  settings.md  user_menu.md  widgets.md
docs/architecture/: module-map.md
docs/contributing/: changelog.md  compatibility.md  guide.md
docs/examples/: demo-app.md
docs/explanations/: architecture.md  forms-ux.md  operations.md  performance.md  security.md
docs/getting-started/: first-login.md  first-model.md  install.md
docs/how-to/: bulk-actions.md  custom-view.md  custom-widget.md  customize-list.md  deploy-reverse-proxy.md  file-upload.md  filters.md  fk-autocomplete.md  override-templates.md  permissions.md  register-model.md  search-ordering.md  testing.md
docs/reference/: adapters.md  adminsite.md  endpoints.md  errors-logging.md  index-by-symbols.md  modeladmin.md  permissions-auth.md  routing.md  settings.md  templates-assets.md  widgets.md
example/: rendering.py
example/apps/: __init__.py
example/config/: __init__.py  main.py  orm.py  routers.py  settings.py
example/pages/: __init__.py  home.py  public_welcome.py  welcome_page.py
example/templates/: __init__.py  renderer.py
free-admin/: _bootstrap.py  conf.py  provider.py  router.py  runner.py
free-admin/api/: cards.py
free-admin/core/: __init__.py  registry.py  sidebar.py
free-admin/models/: __init__.py
free-admin/static/: admin-form.js
free-admin/templates/: base.html
free-admin/utils/: __init__.py
free-admin/widgets/: base.py  context.py
freeadmin/: __init__.py  _bootstrap.py  boot.py  cli.py  conf.py  crud.py  hub.py  meta.py  middleware.py  provider.py  runner.py
freeadmin/adapters/: __init__.py  base.py
freeadmin/admin/: __init__.py  rbac.py  setting.py  user.py
freeadmin/api/: __init__.py  base.py  cards.py  upload.py
freeadmin/application/: __init__.py  factory.py
freeadmin/apps/: __init__.py
freeadmin/boot/: __init__.py  collector.py  manager.py  registry.py
freeadmin/contrib/: __init__.py
freeadmin/core/: __init__.py  app.py  auth.py  base.py  cards.py  conf.py  context.py  discovery.py  exceptions.py  filters.py  hub.py  inline.py  menu.py  middleware.py  models.py  pages.py  registry.py  sidebar.py  site.py  virtual.py
freeadmin/example/: __init__.py
freeadmin/models/: __init__.py  _registry.py  content_type.py  groups.py  setting.py  users.py
freeadmin/orm/: __init__.py  config.py
freeadmin/pages/: __init__.py  example_welcome_page.py  user_menu.py  views.py
tests/: __init__.py  conftest.py  system_models.py  test_admin_guard_middleware.py  test_admin_hub_router_cache.py  test_admin_migration_notice.py  test_admin_service_create_uuid.py  test_admin_site_finalize.py  test_application_factory.py  test_boot_manager_model_registration.py  test_card_cache.py  test_card_manager_state.py  test_cli_init.py  test_cli_scaffolding.py  test_conf_event_cache.py  test_example_application.py  test_export_import.py  test_export_import_wizards.py  test_export_selected_action.py  test_graph_stream_link_inline.py  test_import_upload_cache.py  test_inlines.py  test_main_menu_cache.py  test_models_import.py  test_normalize_payload.py  test_orm_lifecycle_startup.py  test_permissions_cache.py  test_public_pages.py  test_settings_export.py  test_sidebar_views.py  test_sqlite_event_cache.py  test_static_assets.py  test_system_config_startup.py
(+355 files in other folders)
