[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "freeadmin"
version = "0.1.0"
description = "Reusable administrative interface extracted from Cortex."
authors = [{ name = "Timur Kady", email = "timurkady@yandex.com" }]
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
license-files = ["LICENSE"]
keywords = ["fastapi", "admin", "tortoise-orm", "dashboard"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
]
dependencies = [
    "click>=8.1,<9.0",
    "fastapi>=0.110,<0.112",
    "starlette>=0.37,<0.38",
    "jinja2>=3.1,<4.0",
    "itsdangerous>=2.1,<3.0",
    "tortoise-orm>=0.20,<0.22",
    "python-multipart>=0.0.7,<0.0.9",
    "pydantic>=1.10,<3.0",
    "pyjwt>=2.8,<3.0",
    "openpyxl>=3.1,<4.0",
    "lxml>=4.9,<6.0",
]

[project.scripts]
freeadmin = "freeadmin.cli:cli"

[project.urls]
Homepage = "https://github.com/TimurKady/freeadmin"
Source = "https://github.com/TimurKady/freeadmin"
Documentation = "https://github.com/TimurKady/freeadmin#readme"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["freeadmin*"]

[tool.setuptools.package-data]
freeadmin = ["freeadmin/**/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
