[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "freeadmin"
version = "0.1.0"
description = "Reusable administrative interface extracted from Cortex."
authors = [{ name = "Timur Kady", email = "timurkady@yandex.com" }]
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
license-files = ["LICENSE"]
keywords = ["fastapi", "admin", "tortoise-orm", "dashboard"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
dependencies = [
    "click>=8.1,<9.0",
    "fastapi>=0.110,<0.112",
    "starlette>=0.37,<0.38",
    "jinja2>=3.1,<4.0",
    "itsdangerous>=2.1,<3.0",
    "tortoise-orm>=0.20,<0.22",
    "python-multipart>=0.0.7,<0.0.9",
    "pydantic>=1.10,<3.0",
    "pyjwt>=2.8,<3.0",
    "openpyxl>=3.1,<4.0",
]

[project.scripts]
freeadmin = "freeadmin.cli:cli"

[project.urls]
Homepage = "https://github.com/TimurKady/freeadmin"
Source = "https://github.com/TimurKady/freeadmin"
Documentation = "https://github.com/TimurKady/freeadmin#readme"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["freeadmin"]
[tool.hatch.build.targets.wheel.force-include]
"COMMERCIAL-LICENSE.md" = "COMMERCIAL-LICENSE.md"

[tool.hatch.build.targets.sdist]
include = [
    "freeadmin",
    "docs",
    "example",
    "tests",
    "LICENSE",
    "COMMERCIAL-LICENSE.md",
    "README.md",
    "MANIFEST.in",
    "pyproject.toml",
]

[tool.setuptools.package-data]
freeadmin = ["static/**/*", "templates/**/*"]
